# Zazam

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_alt.txt  CMakeLists_o.txt  README.md
include/: zazam.hpp
src/: HashGenerator.cpp  HashGenerator.hpp  Identificator.cpp  Identificator.hpp  Sequencer.cpp  Sequencer.hpp
src/core/: Identificator.cpp  Identificator.hpp  Sequencer.cpp  Sequencer.hpp
src/core/utils/: MusicTensor.hpp  Utils.hpp  ZazamDataTypes.hpp
src/realtime/: Recorder.hpp
tests/: identify.cpp  sequence.cpp  test.cpp
utils/: MusicTensor.cpp  MusicTensor.hpp  Utils.hpp  ZazamDataTypes.hpp
